Search List styling Code Cleanup